# cargo_fetch

./: Cargo.toml  README.md
examples/: fetch_serde.rs
src/: lib.rs
