[package]
name = "cargo_fetch"
version = "0.1.1"
edition = "2021"
authors = ["Niki4tap <rombiklol2@gmail.com>"]
description = "A library that aims to provide an easy and stable API for tools to fetch packages."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.68.0"
url = "2.3.1"
semver = "1.0.16"
